--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
+    "mapbox-gl": "^2.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
