--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
     "swiper": "^8.0.7",
